fixed input field covering first filtered result on the list

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ html, body {
   width: 30vw;
 }
     .user-input input {
-      position: absolute;
+      position: relative;;
       width: 100%;
       line-height: 1.4em;
       font-size: 1.4em;
